# Assignment2

assignment_2/: CMakeLists.txt  as2-gdb.txt  as2UdpGui.py  noworky.c
assignment_2/app/: CMakeLists.txt
assignment_2/app/include/: draw_stuff.h
assignment_2/app/src/: draw_stuff.c  main.c
assignment_2/gpio_state/: CMakeLists.txt
assignment_2/gpio_state/include/: rotar_statemachine.h
assignment_2/gpio_state/src/: gpio.c  main.c  rotar_statemachine.c
assignment_2/hal/include/hal/: circular_buffer.h  connection.h  gpio.h  helper.h  i2c_bus.h  periodTimer.h  pwm.h  rotar_statemachine.h  sampler.c  sampler.h  udp.h
assignment_2/hal/src/: circular_buffer.c  connection.c  gpio.c  helper.c  i2c_bus.c  pwm.c  rotar_statemachine.c  sampler.c  udp.c
